--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,25 @@
-server.port=8082
 server.servlet.context-path=/mobileconnection
-spring.datasource.url=jdbc:mysql://localhost:3306/mobileconnection
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+
+ server.port=8082
+ 
+#Datasource
+
+ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+ spring.datasource.url=jdbc:mysql://localhost:3306/mobileconnection?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
+ spring.datasource.username=root
+
+ spring.datasource.password=root
+ 
+#Hibernate properties
+
+ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+ 
+#Hibernate ddl auto
+ 
+spring.jpa.hibernate.ddl-auto=update
+
+ spring.jpa.show-sql=true
+ 
 sonar.host.url=http://localhost:9000
